<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_id2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="503dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:theme="@style/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:srcCompat="@drawable/tierra" />

        <View
            android:id="@+id/divider21"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/title2"
            android:textColor="@color/primaryTextColor"
            android:textSize="40sp"
            android:theme="@style/text" />

        <View
            android:id="@+id/divider31"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/location2"
            android:textColor="@color/secondaryTextColor"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider91"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/distance2"
            android:textColor="@color/secondaryTextColor"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider41"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider51"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="display1"
                android:text="@string/act1" />

            <View
                android:id="@+id/divider61"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="process"
                android:text="@string/map" />

            <View
                android:id="@+id/divider71"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:id="@+id/divider81"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>